force-app/main/default/objects/custom_create283__c/custom_create283__c.object-meta.xml
<CustomObject>
    <label>Custom created object283</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects283</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>