force-app/main/default/objects/custom_create283__c/fields/custom_create_283field560__c.field-meta.xml
<CustomField>
    <fullName>custom_create_283field560__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 283field560</label>
    <type>Checkbox</type>
</CustomField>